--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 }
 body {
     background-color: red;
-    font-family: lato, sans-serif;
+    font-family: Lato, sans-serif;
     font-weight: 300;
     color: #3a3a3a;
 }
@@ -23,6 +23,7 @@ h1, h2 {
 #logo {
     float:left;
     font-size: 280%;
+    margin-left: 30px;
 }
 
 /* navigation and links  */
@@ -97,5 +98,29 @@ h1, h2 {
     right:150px;
 
     position: absolute;
+
+}
+#club-ethos {
+    height:600px;
+
+}
+#left-about {
+    padding-top: 30px;
+    width:33%;
+    float:left;
+    background-color:blue ;
+
+}
+#right-about {
+    padding-top: 30px;
+    width:33%;
+    float:right;
+    background-color:silver ;
+
+}
+#center-about {
+    width:33%;
+    margin:0 auto;
+    background-color: green;
 
 }
