--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,3 +168,11 @@ margin: 0 auto;
     border-radius: 50%;
     
 }
+#times {
+    background-image: url("../images/dublin-city.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width:100%;
+    overflow: hidden;
+}
